WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201749
[WinCairo][WK1] Accelerated Compositing can't be disabled by using WebPreferences::setAcceleratedCompositingEnabled
https://bugs.webkit.org/show_bug.cgi?id=201749
Summary
[WinCairo][WK1] Accelerated Compositing can't be disabled by using WebPrefere...
Fujii Hironori
Reported
2019-09-12 19:50:40 PDT
[WinCairo] Accelerated Compositing can't be disabled by using WebPreferences::acceleratedCompositingEnabled WebPreferences::acceleratedCompositingEnabled always retuns TRUE for !USE(CA). See also
Bug 123214
.
Attachments
Patch
(2.52 KB, patch)
2019-09-12 19:56 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(2.52 KB, patch)
2019-09-12 19:58 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(2.54 KB, patch)
2019-09-12 20:03 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-09-12 19:56:41 PDT
Created
attachment 378703
[details]
Patch
Fujii Hironori
Comment 2
2019-09-12 19:58:48 PDT
Created
attachment 378704
[details]
Patch
Fujii Hironori
Comment 3
2019-09-12 20:03:39 PDT
Created
attachment 378705
[details]
Patch
Fujii Hironori
Comment 4
2019-09-13 01:21:20 PDT
Comment on
attachment 378705
[details]
Patch Clearing flags on attachment: 378705 Committed
r249829
: <
https://trac.webkit.org/changeset/249829
>
Fujii Hironori
Comment 5
2019-09-13 01:21:23 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-09-13 01:22:17 PDT
<
rdar://problem/55332282
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug