[WinCairo][WK1] Accelerated Compositing can't be disabled by using WebPreferences::setAcceleratedCompositingEnabled https://bugs.webkit.org/show_bug.cgi?id=201749

Reviewed by Don Olmstead.

WebPreferences::acceleratedCompositingEnabled always returned TRUE
for !USE(CA). It should reflect the pref value set by
setAcceleratedCompositingEnabled.

* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings): Set kCFBooleanTrue to WebKitAcceleratedCompositingEnabledPreferenceKey even for !USE(CG).
(WebPreferences::acceleratedCompositingEnabled): Return the pref value for !USE(CA).

Canonical link: https://commits.webkit.org/215385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249829 268f45cc-cd09-0410-ab3c-d52691b4dbfc